--- a/alacritty.yml
+++ b/alacritty.yml
@@ -47,9 +47,9 @@ window:
   #
   # Blank space added around the window in pixels. This padding is scaled
   # by DPI and the specified value is always added at both opposing sides.
-  #padding:
-  #  x: 0
-  #  y: 0
+  padding:
+    x: 5
+    y: 5
 
   # Spread additional padding evenly around the terminal content.
   #dynamic_padding: false
@@ -69,7 +69,7 @@ window:
   #
   # Window opacity as a floating point number from `0.0` to `1.0`.
   # The value `0.0` is completely transparent and `1.0` is opaque.
-  opacity: 0.8
+  opacity: 0.95
 
   # Startup Mode (changes require restart)
   #
@@ -155,25 +155,25 @@ font:
 
   # Point size
   size: 15.0
-# Offset is the extra space around each character. `offset.y` can be thought
-# of as modifying the line spacing, and `offset.x` as modifying the letter
-# spacing.
-#offset:
-#  x: 0
-#  y: 0
+  # Offset is the extra space around each character. `offset.y` can be thought
+  # of as modifying the line spacing, and `offset.x` as modifying the letter
+  # spacing.
+  #offset:
+  #  x: 0
+  #  y: 0
 
-# Glyph offset determines the locations of the glyphs within their cells with
-# the default being at the bottom. Increasing `x` moves the glyph to the
-# right, increasing `y` moves the glyph upward.
-#glyph_offset:
-#  x: 0
-#  y: 0
+  # Glyph offset determines the locations of the glyphs within their cells with
+  # the default being at the bottom. Increasing `x` moves the glyph to the
+  # right, increasing `y` moves the glyph upward.
+  #glyph_offset:
+  #  x: 0
+  #  y: 0
 
-# Thin stroke font rendering (macOS only)
-#
-# Thin strokes are suitable for retina displays, but for non-retina screens
-# it is recommended to set `use_thin_strokes` to `false`.
-#use_thin_strokes: true
+  # Thin stroke font rendering (macOS only)
+  #
+  # Thin strokes are suitable for retina displays, but for non-retina screens
+  # it is recommended to set `use_thin_strokes` to `false`.
+  use_thin_strokes: true
 
 # Use built-in font for box drawing characters.
 #
@@ -183,7 +183,8 @@ font:
 #builtin_box_drawing: true
 
 # If `true`, bold text is drawn using the bright color variants.
-draw_bold_text_with_bright_colors: false
+draw_bold_text_with_bright_colors: true
+
 # Colors (Tomorrow Night)
 #colors:
 # Default colors
@@ -446,7 +447,7 @@ draw_bold_text_with_bright_colors: false
 # Offer IPC using `alacritty msg` (unix only)
 #ipc_socket: true
 
-#mouse:
+# mouse:
 # Click settings
 #
 # The `double_click` and `triple_click` settings control the time
@@ -454,7 +455,6 @@ draw_bold_text_with_bright_colors: false
 # or triple click.
 #double_click: { threshold: 300 }
 #triple_click: { threshold: 300 }
-
 # If this is `true`, the cursor is temporarily hidden when typing.
 #hide_when_typing: false
 
@@ -462,7 +462,8 @@ draw_bold_text_with_bright_colors: false
 #
 # Terminal hints can be used to find text in the visible part of the terminal
 # and pipe it to other applications.
-#hints:
+hints:
+  launcher: open
 # Keys used for the hint labels.
 #alphabet: "jfkdls;ahgurieowpq"
 
