--- a/alacritty.yml
+++ b/alacritty.yml
@@ -34,6 +34,7 @@ font:
     style: Bold Italic
   size: 15.0
   use_thin_strokes: true
+live_config_reload: true
 draw_bold_text_with_bright_colors: true
 hints:
   launcher: open
