--- a/alacritty.yml
+++ b/alacritty.yml
@@ -33,8 +33,5 @@ font:
     family: MesloLGSDZ Nerd Font
     style: Bold Italic
   size: 15.0
-  use_thin_strokes: true
 live_config_reload: true
-draw_bold_text_with_bright_colors: true
-hints:
-  launcher: open
+alt_send_esc: false # On Macos alt-KEY's are overridden if you set this to true "[]\{}@..."
