--- a/alacritty.yml
+++ b/alacritty.yml
@@ -24,16 +24,16 @@ window:
     multiplier: 1
 font:
   normal:
-    family: MesloLGLDZ Nerd Font
+    family: MesloLGMDZ Nerd Font
     style: Regular
   bold:
-    family: MesloLGLDZ Nerd Font
+    family: MesloLGMDZ Nerd Font
     style: Bold
   italic:
-    family: MesloLGLDZ Nerd Font
+    family: MesloLGMDZ Nerd Font
     style: Italic
   bold_italic:
-    family: MesloLGLDZ Nerd Font
+    family: MesloLGMDZ Nerd Font
     style: Bold Italic
   size: 15.0
 cursor:
