--- a/alacritty.yml
+++ b/alacritty.yml
@@ -10,8 +10,13 @@
 # to the user's home directory starting with `~/`.
 import:
   - ~/.config/alacritty/catppuccin-mocha.yml
+shell:
+  program: /opt/homebrew/bin/nu
+  args:
+    - --login
 env:
   TERM: xterm-256color
+  SHELL: /opt/homebrew/bin/nu
 window:
   padding:
     x: 5
