--- a/alacritty.yml
+++ b/alacritty.yml
@@ -27,6 +27,7 @@ window:
   scrolling:
     history: 10000
     multiplier: 1
+  option_as_alt: Both
 font:
   normal:
     family: MesloLGMDZ Nerd Font
