--- a/alacritty.toml
+++ b/alacritty.toml
@@ -1,4 +1,4 @@
-import = ["/Users/jonas/.config/alacritty/catppuccin-mocha.toml"]
+import = ["~/.config/alacritty/catppuccin-mocha.toml"]
 live_config_reload = true
 
 [cursor.vi_mode_style]
