--- a/catppuccin-mocha.toml
+++ b/catppuccin-mocha.toml
@@ -49,7 +49,7 @@ white = "#BAC2DE"
 yellow = "#F9E2AF"
 
 [colors.primary]
-background = "#1E1E2E"
+background = "#0b0b12"
 bright_foreground = "#CDD6F4"
 dim_foreground = "#CDD6F4"
 foreground = "#CDD6F4"
