--- a/alacritty.toml
+++ b/alacritty.toml
@@ -1,5 +1,3 @@
-import = ["~/.config/alacritty/catppuccin-mocha.toml"]
-live_config_reload = true
 
 [cursor.vi_mode_style]
 blinking = "Off"
@@ -33,7 +31,7 @@ action = "ToggleViMode"
 key = "Space"
 mods = "Control|Shift"
 
-[shell]
+[terminal.shell]
 args = ["--login"]
 program = "/opt/homebrew/bin/nu"
 
@@ -45,3 +43,9 @@ startup_mode = "Maximized"
 [window.padding]
 x = 5
 y = 5
+
+[general]
+live_config_reload = true
+import = ["~/.config/alacritty/catppuccin-mocha.toml"]
+
+[terminal]
